--- a/proton/CMakeLists.txt
+++ b/proton/CMakeLists.txt
@@ -16,4 +16,10 @@ if (PROTON_BUILD_TEST)
 add_executable(example_application ${CMAKE_CURRENT_SOURCE_DIR}/test/src/example_application.cpp)
 target_include_directories(example_application PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
 target_link_libraries(example_application PRIVATE proton)
+add_executable(world_base ${CMAKE_CURRENT_SOURCE_DIR}/test/src/world_base.cpp)
+target_include_directories(world_base PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
+target_link_libraries(world_base PRIVATE proton)
+add_executable(commands ${CMAKE_CURRENT_SOURCE_DIR}/test/src/commands.cpp)
+target_include_directories(commands PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
+target_link_libraries(commands PRIVATE proton)
 endif()
