update archetype; add view to get data in archetypes

--- a/proton/CMakeLists.txt
+++ b/proton/CMakeLists.txt
@@ -22,4 +22,7 @@ target_link_libraries(world_base PRIVATE proton)
 add_executable(commands ${CMAKE_CURRENT_SOURCE_DIR}/test/src/commands.cpp)
 target_include_directories(commands PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
 target_link_libraries(commands PRIVATE proton)
+add_executable(archetype ${CMAKE_CURRENT_SOURCE_DIR}/test/src/archetype.cpp)
+target_include_directories(archetype PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
+target_link_libraries(archetype PRIVATE proton)
 endif()
