add test case for query

--- a/proton/CMakeLists.txt
+++ b/proton/CMakeLists.txt
@@ -25,4 +25,7 @@ target_link_libraries(commands PRIVATE proton)
 add_executable(archetype ${CMAKE_CURRENT_SOURCE_DIR}/test/src/archetype.cpp)
 target_include_directories(archetype PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
 target_link_libraries(archetype PRIVATE proton)
+add_executable(query ${CMAKE_CURRENT_SOURCE_DIR}/test/src/query.cpp)
+target_include_directories(query PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
+target_link_libraries(query PRIVATE proton)
 endif()
